<resources>
    <string name="app_name">MysTareas2</string>
    <string name="username">Nombre de usuario</string>
    <string name="password">Contraseña</string>
    <string name="txt_accept">Aceptar</string>
    <string name="email">Correo Electronico</string>
    <string name="name">Nombre</string>
    <string name="user">Usuario</string>
    <string name="passwordConfirm">Confirmar Contraseña</string>
    <string name="txt_login">Ingresar</string>
    <string name="txt_link"> Crea una Aqui!</string>
    <string name="txt_help">No tienes Cuenta ?</string>
    <string name="txt_title_toolbar">Crear Cuenta</string>
</resources>
